[workspace]
members = ["crates/*", "examples/*"]
default-members = ["crates/whale", "crates/query-flow",  "crates/query-flow-macros", "crates/query-flow-inspector", "examples/*"]
resolver = "2"

[workspace.package]
# Version for query-flow* crates. whale has its own version.
version = "0.12.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ryo33/query-flow"
repository = "https://github.com/ryo33/query-flow"
readme = "README.md"

[workspace.dependencies]
whale = { path = "crates/whale", version = "0.5.0" }
query-flow = { path = "crates/query-flow", version = "0.12.1" }
query-flow-macros = { path = "crates/query-flow-macros", version = "0.12.1" }
query-flow-inspector = { path = "crates/query-flow-inspector", version = "0.12.1" }
ahash = "0.8"
papaya = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", features = ["full"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
heck = "0.5"
anyhow = "1"
