[package]
name = "query-flow-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Parameterized fuzzy testing and benchmarking suite for query-flow"

[dependencies]
query-flow.workspace = true
query-flow-inspector.workspace = true
ahash.workspace = true
serde.workspace = true
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[[bench]]
name = "fuzz_bench"
harness = false
