[package]
name = "query-flow-inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Flow Inspector: Tracing and observability for query-flow"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
parking_lot = "0.12"
tracing = { version = "0.1", optional = true }
serde.workspace = true

[dev-dependencies]
query-flow.workspace = true
serde_json = "1"
