[package]
name = "query-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["reactive", "incremental"]
description = "A high-level query framework built on whale for incremental computation."
categories = []

[features]
default = []
inspector = ["dep:query-flow-inspector", "dep:parking_lot"]

[dependencies]
whale.workspace = true
ahash.workspace = true
papaya.workspace = true
query-flow-macros.workspace = true
query-flow-inspector = { workspace = true, optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tokio.workspace = true
query-flow-inspector.workspace = true
