[package]
name = "query-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["reactive", "incremental"]
description = "A high-level query framework built on whale for incremental computation."
categories = []

[dependencies]
whale.workspace = true
ahash.workspace = true
papaya.workspace = true
anyhow.workspace = true
query-flow-macros.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
